# customer-analytics-ecommerce

./: 01_Data_Preprocessing_EDA.ipynb  02_RFM_and_Segmentation.ipynb  03_Churn_Prediction.ipynb  04_CLV_Analysis.ipynb  05_AB_Testing.ipynb  README.md  pyproject.toml
data/: rfm_analysis.csv
