[project]
name = "Complete-Customer-Analytics-Project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.0",
    "lifetimes>=0.11.3",
    "matplotlib>=3.10.5",
    "pandas>=2.3.1",
    "pip>=25.2",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "xgboost>=3.0.3",
]
